2025R1_ws/src/navigation/log/build_2025-05-05_01-18-37/navigation/stdout_stderr.log
running egg_info
creating build/navigation/navigation.egg-info
writing build/navigation/navigation.egg-info/PKG-INFO
writing dependency_links to build/navigation/navigation.egg-info/dependency_links.txt
writing entry points to build/navigation/navigation.egg-info/entry_points.txt
writing requirements to build/navigation/navigation.egg-info/requires.txt
writing top-level names to build/navigation/navigation.egg-info/top_level.txt
writing manifest file 'build/navigation/navigation.egg-info/SOURCES.txt'
reading manifest file 'build/navigation/navigation.egg-info/SOURCES.txt'
writing manifest file 'build/navigation/navigation.egg-info/SOURCES.txt'
running build
running build_py
creating /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build
creating /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib
creating /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation
copying navigation/read_degree_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation
copying navigation/navigation_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation
copying navigation/__init__.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation
copying navigation/active_caster_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation
copying navigation/omni_wheel_speed_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation
running install
running install_lib
creating /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation
copying /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation/read_degree_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation
copying /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation/navigation_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation
copying /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation/__init__.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation
copying /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation/active_caster_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation
copying /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/build/lib/navigation/omni_wheel_speed_node.py -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation
byte-compiling /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation/read_degree_node.py to read_degree_node.cpython-312.pyc
  File "/home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation/read_degree_node.py", line 3
    """
    ^^^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xb6 in position 32: invalid start byte

byte-compiling /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation/navigation_node.py to navigation_node.cpython-312.pyc
byte-compiling /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation/__init__.py to __init__.cpython-312.pyc
byte-compiling /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation/active_caster_node.py to active_caster_node.cpython-312.pyc
byte-compiling /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation/omni_wheel_speed_node.py to omni_wheel_speed_node.cpython-312.pyc
running install_data
creating /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/share/ament_index
creating /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/share/ament_index/resource_index
creating /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/share/ament_index/resource_index/packages
copying resource/navigation -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/share/ament_index/resource_index/packages
copying package.xml -> /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/share/navigation
running install_egg_info
Copying build/navigation/navigation.egg-info to /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/python3.12/site-packages/navigation-0.0.0-py3.12.egg-info
running install_scripts
Installing active_caster_node script to /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/navigation
Installing navigation_node script to /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/navigation
Installing read_degree_node script to /home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/install/navigation/lib/navigation
writing list of installed files to '/home/robotics/Robocon2025_R1/2025R1_ws/src/navigation/build/navigation/install.log'
